--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   web:
     build: .
-    command: python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    command: sleep 20 && /usr/local/bin/entrypoint.sh
     volumes:
       - .:/app
     ports:
