--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "5432:5432"
 
   web:
+    image: web
     build: .
     command: sleep 20 && /usr/local/bin/entrypoint.sh
     volumes:
